# la-kyll

./: .gitignore  .gitlab-ci.yml  .gitmodules  config.yml  la-kyll.opam
examples/site-1/: about.md  index.html
examples/site-1/_layouts/: site.html
examples/site-1/posts/: test.md
examples/site-1/public/: about.html  index.html
examples/site-1/public/posts/: test.html
site/: config.yml  site.ml
site/css/: style.css
site/pages/: index.html
src/: config.ml  document.ml  dsl.ml  dune  error.ml  filesystem.ml  lexer.mll  main.ml  util.ml  yaml_aux.ml
templates/: site.html
